--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exemplos JavaScript</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Exemplos JavaScript</h1>
+    <p>Clique em um dos botões abaixo para executar um dos exemplos:</p>
+    
+    <div class="button-container">
+        <button onclick="executarExemplo1()">Exemplo 1 - Jogo dos Números Secretos</button>
+        <button onclick="executarExemplo2()">Exemplo 2 - Cálculo de Média</button>
+        <button onclick="executarExemplo3()">Exemplo 3 - Soma dos Números</button>
+    </div>
 
+    <script src="scripts.js"></script>
+</body>
+</html>
