--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Exemplos JavaScript</h1>
-    <p>Clique em um dos botões abaixo para executar um dos exemplos:</p>
+    <p>Clique em um dos botoes abaixo para executar um dos exemplos:</p>
     
     <div class="button-container">
-        <button onclick="executarExemplo1()">Exemplo 1 - Jogo dos Números Secretos</button>
-        <button onclick="executarExemplo2()">Exemplo 2 - Cálculo de Média</button>
-        <button onclick="executarExemplo3()">Exemplo 3 - Soma dos Números</button>
+        <button onclick="executarExemplo1()">Exemplo 1 - Jogo dos Numeros Secretos</button>
+        <button onclick="executarExemplo2()">Exemplo 2 - Calculo de Media</button>
+        <button onclick="executarExemplo3()">Exemplo 3 - Soma dos NuSmeros</button>
     </div>
 
     <script src="scripts.js"></script>
