--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="button-container">
         <button onclick="executarExemplo1()">Exemplo 1 - Jogo dos Numeros Secretos</button>
         <button onclick="executarExemplo2()">Exemplo 2 - Calculo de Media</button>
-        <button onclick="executarExemplo3()">Exemplo 3 - Soma dos NuSmeros</button>
+        <button onclick="executarExemplo3()">Exemplo 3 - Soma dos Numeros</button>
     </div>
 
     <script src="scripts.js"></script>
