--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Exemplos JavaScript</h1>
     <p>Clique em um dos botoes abaixo para executar um dos exemplos:</p>
     
-    <div class="button-container">
+    <div class="container-button">
         <button onclick="executarExemplo1()">Exemplo 1 - Jogo dos Numeros Secretos</button>
         <button onclick="executarExemplo2()">Exemplo 2 - Calculo de Media</button>
         <button onclick="executarExemplo3()">Exemplo 3 - Soma dos Numeros</button>
