--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplos JavaScript</title>
+    <title>Projeto2 VF</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Exemplos JavaScript</h1>
+    <h1>Projeto2 VF</h1>
     <p>Clique em um dos botoes abaixo para executar um dos exemplos:</p>
     
     <div class="container-button">
