--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <p>Clique em um dos botoes abaixo para executar um dos exemplos:</p>
     
     <div class="container-button">
-        <button onclick="executarExemplo1()">Exemplo 1 - Jogo dos Numeros Secretos</button>
-        <button onclick="executarExemplo2()">Exemplo 2 - Calculo de Media</button>
-        <button onclick="executarExemplo3()">Exemplo 3 - Soma dos Numeros</button>
+        <button onclick="executar1()">Jogo dos Numeros Secretos</button>
+        <button onclick="executar2()">Calculo de Media</button>
+        <button onclick="executar3()">Soma dos Numeros</button>
     </div>
 
     <script src="scripts.js"></script>
